--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-image": "^2.2.15",
     "gatsby-plugin-google-analytics": "^2.1.12",
     "gatsby-plugin-manifest": "^2.2.12",
+    "gatsby-plugin-netlify-cms": "^4.1.25",
     "gatsby-plugin-nprogress": "^2.1.4",
     "gatsby-plugin-offline": "^3.0.0",
     "gatsby-plugin-react-helmet": "^3.1.5",
@@ -26,6 +27,7 @@
     "gatsby-transformer-sharp": "^2.2.12",
     "is-ci-cli": "^1.1.1",
     "lodash": "^4.17.15",
+    "netlify-cms-app": "^2.9.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-headroom": "^2.2.8",
